Call another micro service from one by direct service call -- contginuing